# CalAIdev

./: .gitmodules  README.md
como falar com a IA/: Estrutura de Prompt - CalAI.md  como_a_IA_ve_o_que_voce_escreve.md  demo-emails-ata.md  prompt_estruturado.md  prompt_nao_estruturado.md
crewai - curriculo personalizado com pesquisa/: .env.example  .gitignore  README.md  pyproject.toml
crewai - curriculo personalizado com pesquisa/src/: app.py  teste_rapido.py
crewai - curriculo personalizado com pesquisa/src/crews/companies_research_crew/: companies_research_crew.py
crewai - curriculo personalizado com pesquisa/src/crews/companies_research_crew/config/: agents.yaml  tasks.yaml
crewai - curriculo personalizado com pesquisa/src/crews/tailor_resume_crew/: tailor_resume_crew.py
crewai - curriculo personalizado com pesquisa/src/crews/tailor_resume_crew/config/: agents.yaml  tasks.yaml
crewai - curriculo personalizado com pesquisa/src/tools/: __init__.py  ddgs_tool.py  multi_document_reader_tool.py
crewai para iniciantes/: .gitignore  README.md  artigo_final.md  main.py  pyproject.toml
n8n com IA via MCP/: .gitignore  AGENTS.md  README.md  data_table.csv
n8n com IA via MCP/.github/agents/: n8n-workflow-builder.agent.md
