[project]
name = "crewai-resumo-personalizado-com-pesquisa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=1.2.1",
    "docx2txt>=0.9",
    "duckduckgo-search>=8.1.1",
    "gradio>=5.49.1",
    "markdown2>=2.5.4",
    "pypdf>=6.1.3",
]
